Develop outline for index.html and add navigation section.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 
 <html lang="en">
   <head>
-    <title>Placeholder Title</title>
+    <title>Bay Bridge</title>
   </head>
 
   <body>
-    <h1>Placeholder Heading</h1>
+    <h1>San Francisco - Oakland Bay Bridge</h1>
+    <h2>The Best Bridge in the Bay Area</h2>
+
+    <section>
+      <h3>Description</h3>
+      <p>
+    </section>
+
+    <section>
+      <h3>Brief History</h3>
+    </section>
+      
+    <section>
+      <h3>Operational Statistics</h3>
+    </section>
+
+    <nav>
+      <h3>Additional Information Links</h3>
+      <ul>
+        <li><a href="http://baybridgeinfo.org/">Official Caltrans Site</a></li>
+        <li><a href="http://www.dot.ca.gov/hq/esc/tollbridge/SFOBB/Sfobbfacts.html">Caltrans Facts at a Glance</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/San_Francisco%E2%80%93Oakland_Bay_Bridge">Bay Bridge Wikipedia</a></li>
+      </ul>
+    </nav>
+
   </body>
 </html>
