Add copy and embed images for Brief History section of index.html. Add citations to image sources in footer of index.html.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,34 @@
 
     <section>
       <h3>Brief History</h3>
-      
+      <p>
+        The idea of building a bridge connecting S.F. to Oakland was first conceived during the early 1870's. A Bay Bridge Committee was developing plans to construct a railway bridge. Although the idea had widespread public support, construction was too much of an engineering and economic challenge since the bay was too wide and too deep where the plans proposed it be built
+      </p>
+      <p>
+        The idea continued to hold appeal though, especially with increasing automobile traffic. More than 50 years later, in 1926, the California Legislature established the California Toll Bridge Authority with the responsibility constructing a bridge that would connect San Francisco and Alameda County. New plans were developed by 1929, including the Yerba Buena Island connection, and final approval to build the bridge was obtained in 1931.
+      </p>
+
+      <figure>
+        <img src="images/west_span_construction_02.jpg" alt="West Span Construction of the Bay Bridge" height="578" width="900" />
+        <figcaption>Construction of the West Span of the Bay Bridge</figcaption>
+      </figure>
+
+      <p>
+        Construction began on July 9, 1933. The engineers and workers were able to overcome enormous engineering challenges to complete the work including developing at the time state-of the art technichques to build the foundations and anhorages. Construction took three years, and finished six months ahead of schedule. More than six percent of the total steel output of the nation in 1933 went towards construction of the bridge. The total costs were $77 million, including the construction of the Transbay Transit Terminal.
+      </p>
+
+      <p>
+        That wasn't the end of construction however. Modifications were made to remove a railway on the bridge and increase capacity in 1958. And on October 17, 1989, the Magnitude 6.9 Loma Prieta earthquake caused the collapse of a 50 ft section of the upper deck of the original eastern section. Repairs of the bridge took about one month.
+      </p>
+
+      <figure>
+        <img src="images/east_section_EQ_damage.jpg" alt="Loma PRieta Earthquake Damage" />
+        <figcaption>Collapse of the Upper Deck Caused by the M6.9 Loma Prieta Earthquake</figcaption>
+      </figure>
+
+      <p>
+        Following this a series of seismic retrofitting measures were developed for the bridge. On the western section, most of the structural steel supporting the bridge deck was replaced and old weaker rivets were replaced with stronger ones. Retrofit plans for the eastern section weren't implemented due to the costs of them. Instead, a replacement span was designed and constructed starting in 2002 and opening in 2013. The older eastern section is currently being dismantled and removed.
+      </p>
     </section>
       
     <section>
@@ -41,6 +68,22 @@
         <li><a href="https://en.wikipedia.org/wiki/San_Francisco%E2%80%93Oakland_Bay_Bridge">Bay Bridge Wikipedia</a></li>
       </ul>
     </nav>
+
+    <footer>
+    <cite>
+      <p>
+        Thanks to <a href="http://baybridgeinfo.org/visit-bridge">Caltrans</a> for the image of the <a href="http://baybridgeinfo.org/sites/default/files/imagecache/fullscreen_bg/images/background/front/new_front4.jpg">Bay Bridge at Dusk</a>
+      </p>
+
+      <p>
+        Thanks to <a href="http://baybridgeinfo.org/history">Caltrans</a> for the image of the <a href="http://baybridgeinfo.org/sites/default/files/images/background/history/historic_westspan_3.jpg">Construction of the West Span of the Bay Bridge</a>
+      </p>
+
+      <p>
+        Thanks to <a href="http://baybridgeinfo.org/visit-bridge">Caltrans</a> for the image of the <a href="http://baybridgeinfo.org/sites/default/files/imagecache/fullscreen_bg/images/background/front/new_front4.jpg">Bay Bridge at Night</a>
+      </p>
+    </cite>
+  </footer>
 
   </body>
 </html>
