Add tables and list to Facts at a Glance section of index.html.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <section>
       <h3>Brief History</h3>
       <p>
-        The idea of building a bridge connecting S.F. to Oakland was first conceived during the early 1870's. A Bay Bridge Committee was developing plans to construct a railway bridge. Although the idea had widespread public support, construction was too much of an engineering and economic challenge since the bay was too wide and too deep where the plans proposed it be built
+        The idea of building a bridge connecting S.F. to Oakland was first conceived during the early 1870's. A Bay Bridge Committee was developing plans to construct a railway bridge. Although the idea had widespread public support, construction was too much of an engineering and economic challenge since the bay was too wide and too deep where the plans proposed it be built.
       </p>
+
       <p>
         The idea continued to hold appeal though, especially with increasing automobile traffic. More than 50 years later, in 1926, the California Legislature established the California Toll Bridge Authority with the responsibility constructing a bridge that would connect San Francisco and Alameda County. New plans were developed by 1929, including the Yerba Buena Island connection, and final approval to build the bridge was obtained in 1931.
       </p>
@@ -57,7 +58,48 @@
     </section>
       
     <section>
-      <h3>Operational Statistics</h3>
+      <h3>Facts at a Glance</h3>
+      <table border = 1>
+        <tr>
+          <th colspan = 4>West Bay Suspension Bridge</th>
+        </tr>
+        <tr>
+          <th>Length</th>
+          <th>Vertical Clearance</th>
+          <th>Span Length</th>
+          <th>Tower Height</th>
+        </tr>
+        <tr>
+          <td align="center">9,260 ft</td>
+          <td align="center">220 ft </td>
+          <td align="center">2,310 ft</td>
+          <td align="center">526 ft</td>
+        </tr>
+        </table>
+        <br />
+        <table border = 1>
+        <tr>
+          <th colspan = 3>East Bay Cantilever Bridge</th>
+        </tr>
+        <tr>
+          <th>Length</th>
+          <th>Vertical Clearance</th>
+          <th>Span Length</th>
+        </tr>
+        <tr>
+          <td align="center">10,176 ft</td>
+          <td align="center">191 ft </td>
+          <td align="center">1,400 ft</td>
+        </tr>
+      </table>
+
+      <ul>
+        <li>Deepest Bridge Pier: 242 feet below water level - 396 feet high</li>
+        <li>Tunnel: Largest bore tunnel in the world: 76 ft wide, 58 ft high, 1700 ft long</li>
+        <li>Opened: November 12, 1936</li>
+        <li>Cost: $77 million (Including Transbay Transit Terminal)</li>
+        <li>Avg. Daily Traffic: 270,000 vehicles</li>
+      </ul>
     </section>
 
     <nav>
