Format headers, add horizontal rules,correct image citation and add link to website evaluation subpage to index.html. Create basic caltrans_site_eval.html file.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
 
   <body>
-    <h1>San Francisco - Oakland Bay Bridge</h1>
-    <h2>The Best Bridge in the Bay Area</h2>
+    <h1>San Francisco - Oakland Bay Bridge:<br />
+        The Best Bridge in the Bay Area</h1>
 
     <section>
-      <h3>Description</h3>
+      <h2>Description</h2>
       <p>
         The San Francisco - Oakland Bay Bridge (locally referred to just as the Bay Bridge) consists of two bridge sections connecting at Yerba Buena Island that provide convenient vehicle access between Oakland and San Francisco (S.F.), California. The length of the bridge segments is 4.5 miles; if you include approaches and the toll plaza the length is 8.4 miles.
       </p> 
@@ -24,8 +24,10 @@
       </p>
     </section>
 
+    <hr>
+
     <section>
-      <h3>Brief History</h3>
+      <h2>Brief History</h2>
       <p>
         The idea of building a bridge connecting S.F. to Oakland was first conceived during the early 1870's. A Bay Bridge Committee was developing plans to construct a railway bridge. Although the idea had widespread public support, construction was too much of an engineering and economic challenge since the bay was too wide and too deep where the plans proposed it be built.
       </p>
@@ -56,9 +58,11 @@
         Following this a series of seismic retrofitting measures were developed for the bridge. On the western section, most of the structural steel supporting the bridge deck was replaced and old weaker rivets were replaced with stronger ones. Retrofit plans for the eastern section weren't implemented due to the costs of them. Instead, a replacement span was designed and constructed starting in 2002 and opening in 2013. The older eastern section is currently being dismantled and removed.
       </p>
     </section>
-      
+    
+    <hr>
+  
     <section>
-      <h3>Facts at a Glance</h3>
+      <h2>Facts at a Glance</h2>
       <table border = 1>
         <tr>
           <th colspan = 4>West Bay Suspension Bridge</th>
@@ -102,14 +106,23 @@
       </ul>
     </section>
 
+    <hr>
+
     <nav>
-      <h3>Additional Information Links</h3>
+      <h2>Additional Links</h2>
+      <h3>My Evaluation of a Similar Bay Bridge Website</h3>
+      <a href="caltrans_site_eval.html">Website Evaluation</a>
+      <br />
+
+      <h3>More Information</h3>
       <ul>
         <li><a href="http://baybridgeinfo.org/">Official Caltrans Site</a></li>
         <li><a href="http://www.dot.ca.gov/hq/esc/tollbridge/SFOBB/Sfobbfacts.html">Caltrans Facts at a Glance</a></li>
         <li><a href="https://en.wikipedia.org/wiki/San_Francisco%E2%80%93Oakland_Bay_Bridge">Bay Bridge Wikipedia</a></li>
       </ul>
     </nav>
+
+    <hr>
 
     <footer>
     <cite>
@@ -122,7 +135,7 @@
       </p>
 
       <p>
-        Thanks to <a href="http://baybridgeinfo.org/visit-bridge">Caltrans</a> for the image of the <a href="http://baybridgeinfo.org/sites/default/files/imagecache/fullscreen_bg/images/background/front/new_front4.jpg">Bay Bridge at Night</a>
+        Thanks to the <a href="http://earthquake.usgs.gov/earthquakes/states/events/1989_10_18.php">U.S. Geological Survey</a> for the image of <a href="http://earthquake.usgs.gov/earthquakes/states/events/images/1989_10_18/lp_09.jpg">damage</a> to the Bay Bridge sustained from the 1989 Loma Prieta earthquake
       </p>
     </cite>
   </footer>
