Add Rate this Site form element to index.html.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <hr>
   
     <section>
-      <h2>Facts at a Glance</h2>
+      <h2>Just the Facts</h2>
       <table border = 1>
         <tr>
           <th colspan = 4>West Bay Suspension Bridge</th>
@@ -108,10 +108,24 @@
 
     <hr>
 
+    <section>
+      <h2>Rate this Site</h2>
+      <p>Please take a moment and tell me what you think of this site.</p>
+      <form action="http://httpbin.org/get">
+        <b>Did this site provide the information you wanted?</b><br />
+        <input type="radio" name="info_rating" value="yes"> Yes!<br />
+        <input type="radio" name="info_rating" value="maybe"> Kind of...<br />
+        <input type="radio" name="info_rating" value="no"> Nope.<br /><br />
+        <b>What would you recommend to improve the site?</b><br />
+        <input type="text" name="suggestions" size="120"><br /><br />
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+    <hr>
+
     <nav>
       <h2>Additional Links</h2>
-      <h3>My Evaluation of a Similar Bay Bridge Website</h3>
-      <a href="caltrans_site_eval.html">Website Evaluation</a>
+      <a href="caltrans_site_eval.html"><b>My Evaluation of a Similar Bay Bridge Website</b></a>
       <br />
 
       <h3>More Information</h3>
@@ -125,6 +139,7 @@
     <hr>
 
     <footer>
+    <h3>Image Sources</h3>
     <cite>
       <p>
         Thanks to <a href="http://baybridgeinfo.org/visit-bridge">Caltrans</a> for the image of the <a href="http://baybridgeinfo.org/sites/default/files/imagecache/fullscreen_bg/images/background/front/new_front4.jpg">Bay Bridge at Dusk</a>
