Fix relative link to earthquake damage image.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </p>
 
       <figure>
-        <img src="images/east_section_EQ_damage.jpg" alt="Loma PRieta Earthquake Damage" />
-        <figcaption>Collapse of the Upper Deck Caused by the M6.9 Loma Prieta Earthquake</figcaption>
+        <img src="images/east_section_EQ_Damage.jpg" alt="Loma Prieta Earthquake Damage" />
+        <figcaption>Collapse of the Upper Deck Caused by the <b>M</b>6.9 Loma Prieta Earthquake</figcaption>
       </figure>
 
       <p>
