--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <html lang="en">
   <head>
     <title>Bay Bridge</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
   <body>
+  <main>
     <h1>San Francisco - Oakland Bay Bridge:<br />
         The Best Bridge in the Bay Area</h1>
 
-    <section>
+    <section class="primary_info">
       <h2>Description</h2>
       <p>
         The San Francisco - Oakland Bay Bridge (locally referred to just as the Bay Bridge) consists of two bridge sections connecting at Yerba Buena Island that provide convenient vehicle access between Oakland and San Francisco (S.F.), California. The length of the bridge segments is 4.5 miles; if you include approaches and the toll plaza the length is 8.4 miles.
       </p> 
       
       <figure>
-        <img src="images/bay_bridge_at_night.jpg" alt="Bay Bridge at Dusk" height="640" width="955" />
+        <img src="images/bay_bridge_at_night.jpg" alt="Bay Bridge at Dusk" />
         <figcaption>Bay Bridge at Dusk</figcaption>
       </figure>
       <p>
@@ -24,9 +26,7 @@
       </p>
     </section>
 
-    <hr>
-
-    <section>
+    <section class="primary_info">
       <h2>Brief History</h2>
       <p>
         The idea of building a bridge connecting S.F. to Oakland was first conceived during the early 1870's. A Bay Bridge Committee was developing plans to construct a railway bridge. Although the idea had widespread public support, construction was too much of an engineering and economic challenge since the bay was too wide and too deep where the plans proposed it be built.
@@ -37,7 +37,7 @@
       </p>
 
       <figure>
-        <img src="images/west_span_construction_02.jpg" alt="West Span Construction of the Bay Bridge" height="578" width="900" />
+        <img src="images/west_span_construction_02.jpg" alt="West Span Construction of the Bay Bridge" />
         <figcaption>Construction of the West Span of the Bay Bridge</figcaption>
       </figure>
 
@@ -58,10 +58,8 @@
         Following this a series of seismic retrofitting measures were developed for the bridge. On the western section, most of the structural steel supporting the bridge deck was replaced and old weaker rivets were replaced with stronger ones. Retrofit plans for the eastern section weren't implemented due to the costs of them. Instead, a replacement span was designed and constructed starting in 2002 and opening in 2013. The older eastern section is currently being dismantled and removed.
       </p>
     </section>
-    
-    <hr>
   
-    <section>
+    <section class="primary_info">
       <h2>Just the Facts</h2>
       <table border = 1>
         <tr>
@@ -105,10 +103,9 @@
         <li>Avg. Daily Traffic: 270,000 vehicles</li>
       </ul>
     </section>
+    </main>
 
-    <hr>
-
-    <section>
+    <section id="rate_me">
       <h2>Rate this Site</h2>
       <p>Please take a moment and tell me what you think of this site.</p>
       <form action="http://httpbin.org/get">
@@ -117,11 +114,10 @@
         <input type="radio" name="info_rating" value="maybe"> Kind of...<br />
         <input type="radio" name="info_rating" value="no"> Nope.<br /><br />
         <b>What would you recommend to improve the site?</b><br />
-        <input type="text" name="suggestions" size="120"><br /><br />
+        <textarea name="suggestions" rows="4" cols="80"></textarea><br /><br />
         <button type="submit">Submit</button>
       </form>
     </section>
-    <hr>
 
     <nav>
       <h2>Additional Links</h2>
@@ -135,8 +131,6 @@
         <li><a href="https://en.wikipedia.org/wiki/San_Francisco%E2%80%93Oakland_Bay_Bridge">Bay Bridge Wikipedia</a></li>
       </ul>
     </nav>
-
-    <hr>
 
     <footer>
     <h3>Image Sources</h3>
