Add responsive conditions and table formatting to styles.css. Correct citation links in index.html.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   
     <section class="primary_info">
       <h2>Just the Facts</h2>
-      <table border = 1>
+      <table>
         <tr>
           <th colspan = 4>West Bay Suspension Bridge</th>
         </tr>
@@ -72,14 +72,14 @@
           <th>Tower Height</th>
         </tr>
         <tr>
-          <td align="center">9,260 ft</td>
-          <td align="center">220 ft </td>
-          <td align="center">2,310 ft</td>
-          <td align="center">526 ft</td>
+          <td>9,260 ft</td>
+          <td>220 ft </td>
+          <td>2,310 ft</td>
+          <td>526 ft</td>
         </tr>
         </table>
         <br />
-        <table border = 1>
+        <table>
         <tr>
           <th colspan = 3>East Bay Cantilever Bridge</th>
         </tr>
@@ -89,9 +89,9 @@
           <th>Span Length</th>
         </tr>
         <tr>
-          <td align="center">10,176 ft</td>
-          <td align="center">191 ft </td>
-          <td align="center">1,400 ft</td>
+          <td>10,176 ft</td>
+          <td>191 ft </td>
+          <td>1,400 ft</td>
         </tr>
       </table>
 
@@ -134,19 +134,19 @@
 
     <footer>
     <h3>Image Sources</h3>
-    <cite>
-      <p>
+    <div class="image_sources">
+      <cite>
         Thanks to <a href="http://baybridgeinfo.org/visit-bridge">Caltrans</a> for the image of the <a href="http://baybridgeinfo.org/sites/default/files/imagecache/fullscreen_bg/images/background/front/new_front4.jpg">Bay Bridge at Dusk</a>
-      </p>
+      </cite><br/>
 
-      <p>
+      <cite>
         Thanks to <a href="http://baybridgeinfo.org/history">Caltrans</a> for the image of the <a href="http://baybridgeinfo.org/sites/default/files/images/background/history/historic_westspan_3.jpg">Construction of the West Span of the Bay Bridge</a>
-      </p>
+      </cite><br/>
 
-      <p>
+      <cite>
         Thanks to the <a href="http://earthquake.usgs.gov/earthquakes/states/events/1989_10_18.php">U.S. Geological Survey</a> for the image of <a href="http://earthquake.usgs.gov/earthquakes/states/events/images/1989_10_18/lp_09.jpg">damage</a> to the Bay Bridge sustained from the 1989 Loma Prieta earthquake
-      </p>
-    </cite>
+      </cite><br/>
+    </div>
   </footer>
 
   </body>
